added floating action button - working on contact's intent changed the strings.xml file. Ignore error for now

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Bim Chat</string>
+    <string name="welcome_txt">Register Here</string>
+    <string name="name_txt">Name</string>
+    <string name="number_txt">Mobile Number</string>
+    <string name="email_txt">Email Address</string>
+    <string name="register_txt">Register Now</string>
+    <string name="message_title">Messages</string>
 </resources>
